--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="profile-section">
         <label for="profile">Profile:</label>
         <select id="profile" aria-label="Select Profile">
-          <option value="sharvesh">Sharvesh</option>
+          <option value="sharvesh">Mano</option>
           <option value="deva">Deva</option>
-          <option value="sandeep">Sandeep</option>
+          <option value="sandeep">Ananth</option>
         </select>
       </div>
       <nav class="nav-menu">
@@ -47,6 +47,17 @@
 
     <!-- Main Content -->
     <main class="main-content">
+      <!-- ==================== Motivational Quote Section ==================== -->
+      <section id="motivational-quote" class="motivational-quote">
+        <div class="quote-container">
+          <p id="quote-text" class="quote-text" aria-live="polite">Loading motivational quote...</p>
+          <p id="quote-author" class="quote-author" aria-live="polite"></p>
+          <button id="refresh-quote" class="refresh-quote-button">
+            <i class="fas fa-sync-alt"></i> Refresh Quote
+          </button>
+        </div>
+      </section>
+
       <!-- ==================== Overview Tab ==================== -->
       <section id="overview" class="tab-content active">
         <div class="stats-grid">
