--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="profile-section">
         <label for="profile">Profile:</label>
         <select id="profile" aria-label="Select Profile">
-          <option value="sharvesh">Mano</option>
+          <option value="Mano">Mano</option>
           <option value="deva">Deva</option>
-          <option value="sandeep">Ananth</option>
+          <option value="Ananth">Ananth</option>
         </select>
       </div>
       <nav class="nav-menu">
