--- a/index.html
+++ b/index.html
@@ -1,258 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LeetCode Tracker</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>LeetCode Tracker</title>
 
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Font Awesome -->
-  <script
-    src="https://kit.fontawesome.com/a076d05399.js"
-    crossorigin="anonymous"
-  ></script>
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Chart.js (v4.x recommended) -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Chart.js (v4.x recommended) -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <!-- Main Styles -->
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="container">
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <div class="sidebar-header">
-        <h2>LeetCode Tracker</h2>
-      </div>
+    <!-- Main Styles -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        <div class="sidebar-header">
+          <h2>LeetCode Tracker</h2>
+        </div>
 
-      <!-- Profile Section -->
-     <!-- Profile Section -->
-<div class="profile-section">
-  <label for="profile">Profile:</label>
-  <select id="profile" aria-label="Select Profile">
-    <option value="Mano">Mano</option>
-    <option value="deva">Deva</option>
-    <option value="Ananth">Ananth</option>
-    <option value="revanth">Revanth</option> <!-- New Profile Added -->
-  </select>
-</div>
+        <!-- Profile Section -->
+        <div class="profile-section">
+          <label for="profile">Profile:</label>
+          <select id="profile" aria-label="Select Profile">
+            <option value="Mano">Mano</option>
+            <option value="deva">Deva</option>
+            <option value="Ananth">Ananth</option>
+            <option value="revanth">Revanth</option>
+            <option value="murali">Murali</option> <!-- New Profile Added -->
+          </select>
+        </div>
 
-
-      <!-- Navigation Menu -->
-      <nav class="nav-menu">
-        <button class="nav-link active" data-tab="overview">
-          <i class="fas fa-home"></i> Overview
-        </button>
-        <button class="nav-link" data-tab="detailed">
-          <i class="fas fa-chart-bar"></i> Detailed Analysis
-        </button>
-        <button class="nav-link" data-tab="calendar">
-          <i class="fas fa-calendar-alt"></i> Calendar
-        </button>
-      </nav>
-
-      <!-- Sync Button -->
-      <button id="sync-button" class="sync-button">
-        <i class="fas fa-sync-alt"></i> Sync with API
-      </button>
-    </aside>
-
-    <!-- Main Content -->
-    <main class="main-content">
-      <!-- Motivational Quote Section -->
-      <section id="motivational-quote" class="motivational-quote">
-        <div class="quote-container">
-          <p id="quote-text" class="quote-text" aria-live="polite">
-            Loading motivational quote...
-          </p>
-          <p id="quote-author" class="quote-author" aria-live="polite"></p>
-          <button id="refresh-quote" class="refresh-quote-button">
-            <i class="fas fa-sync-alt"></i> Refresh Quote
+        <!-- Navigation Menu -->
+        <nav class="nav-menu">
+          <button class="nav-link active" data-tab="overview">
+            <i class="fas fa-home"></i> Overview
           </button>
-        </div>
-      </section>
+          <button class="nav-link" data-tab="detailed">
+            <i class="fas fa-chart-bar"></i> Detailed Analysis
+          </button>
+          <button class="nav-link" data-tab="calendar">
+            <i class="fas fa-calendar-alt"></i> Calendar
+          </button>
+        </nav>
 
-      <!-- Overview Tab -->
-      <section id="overview" class="tab-content active">
-        <div class="stats-grid">
-          <!-- Total Solved -->
-          <div class="stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-check-circle"></i>
-            </div>
-            <div class="stat-info">
-              <h3>Total Solved</h3>
-              <p id="total-solved">0</p>
-            </div>
+        <!-- Sync Button -->
+        <button id="sync-button" class="sync-button">
+          <i class="fas fa-sync-alt"></i> Sync with API
+        </button>
+      </aside>
+
+      <!-- Main Content -->
+      <main class="main-content">
+        <!-- Motivational Quote Section -->
+        <section id="motivational-quote" class="motivational-quote">
+          <div class="quote-container">
+            <p id="quote-text" class="quote-text" aria-live="polite">
+              Loading motivational quote...
+            </p>
+            <p id="quote-author" class="quote-author" aria-live="polite"></p>
+            <button id="refresh-quote" class="refresh-quote-button">
+              <i class="fas fa-sync-alt"></i> Refresh Quote
+            </button>
           </div>
+        </section>
 
-          <!-- Average Solved Per Day -->
-          <div class="stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-chart-line"></i>
-            </div>
-            <div class="stat-info">
-              <h3>Average Solved Per Day</h3>
-              <div class="chart-container">
-                <canvas id="average-solved-chart"></canvas>
-                <span id="average-solved">0</span>
+        <!-- Overview Tab -->
+        <section id="overview" class="tab-content active">
+          <div class="stats-grid">
+            <!-- Total Solved -->
+            <div class="stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-check-circle"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Total Solved</h3>
+                <p id="total-solved">0</p>
               </div>
             </div>
-          </div>
 
-          <!-- Overall Progress Bar -->
-          <div class="stat-card progress-card">
-            <div class="stat-icon">
-              <i class="fas fa-tasks"></i>
-            </div>
-            <div class="stat-info">
-              <h3>
-                Overall Progress
-                <span
-                  id="overall-progress-numbers"
-                  class="overall-progress-numbers"
-                ></span>
-              </h3>
-              <div class="progress-info">
-                <div class="progress-bar-container">
-                  <div
-                    id="overall-progress-bar"
-                    class="progress-bar-fill"
-                    role="progressbar"
-                    aria-valuenow="0"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
+            <!-- Average Solved Per Day -->
+            <div class="stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-chart-line"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Average Solved Per Day</h3>
+                <div class="chart-container">
+                  <canvas id="average-solved-chart"></canvas>
+                  <span id="average-solved">0</span>
                 </div>
-                <span
-                  id="progress-percentage"
-                  class="progress-percentage"
-                  >0%</span
-                >
+              </div>
+            </div>
+
+            <!-- Overall Progress Bar -->
+            <div class="stat-card progress-card">
+              <div class="stat-icon">
+                <i class="fas fa-tasks"></i>
+              </div>
+              <div class="stat-info">
+                <h3>
+                  Overall Progress
+                  <span id="overall-progress-numbers" class="overall-progress-numbers"></span>
+                </h3>
+                <div class="progress-info">
+                  <div class="progress-bar-container">
+                    <div
+                      id="overall-progress-bar"
+                      class="progress-bar-fill"
+                      role="progressbar"
+                      aria-valuenow="0"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                  <span id="progress-percentage" class="progress-percentage">0%</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Current Streak -->
+            <div class="stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-fire"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Current Streak</h3>
+                <p id="current-streak">0</p>
+              </div>
+            </div>
+
+            <!-- Highest Streak -->
+            <div class="stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-trophy"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Highest Streak</h3>
+                <p id="highest-streak">0</p>
               </div>
             </div>
           </div>
 
-          <!-- Current Streak -->
-          <div class="stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-fire"></i>
+          <!-- Problems List (collapsible by topic) -->
+          <section id="problems-list"></section>
+
+          <!-- Leaderboard Section -->
+          <section id="ranking-section" class="ranking-section">
+            <h2>Leaderboard</h2>
+            <table id="ranking-table">
+              <thead>
+                <tr>
+                  <th>Rank</th>
+                  <th>Profile</th>
+                  <th>Score</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Ranking rows will be injected here by JS -->
+              </tbody>
+            </table>
+          </section>
+        </section>
+
+        <!-- Detailed Analysis Tab -->
+        <section id="detailed" class="tab-content">
+          <div class="detailed-stats-grid">
+            <!-- Total Solved -->
+            <div class="detailed-stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-check-circle"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Total Solved</h3>
+                <p id="detailed-total-solved">0</p>
+              </div>
             </div>
-            <div class="stat-info">
-              <h3>Current Streak</h3>
-              <p id="current-streak">0</p>
+            <!-- Average Solved Per Day -->
+            <div class="detailed-stat-card">
+              <div class="stat-icon">
+                <i class="fas fa-chart-line"></i>
+              </div>
+              <div class="stat-info">
+                <h3>Average Solved Per Day</h3>
+                <p id="detailed-average-solved">0</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Solves Over Time Graph -->
+          <div class="graph-section">
+            <h2>Solves Over Time</h2>
+            <div class="chart-wrapper custom-chart-height">
+              <canvas id="solves-over-time-chart"></canvas>
             </div>
           </div>
 
-          <!-- Highest Streak -->
-          <div class="stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-trophy"></i>
-            </div>
-            <div class="stat-info">
-              <h3>Highest Streak</h3>
-              <p id="highest-streak">0</p>
+          <!-- Difficulty Distribution -->
+          <div class="chart-section">
+            <h2>Difficulty Distribution</h2>
+            <div class="chart-wrapper custom-chart-height">
+              <canvas id="difficulty-distribution-chart"></canvas>
             </div>
           </div>
-        </div>
 
-        <!-- Problems List (collapsible by topic) -->
-        <section id="problems-list"></section>
-      </section>
-
-      <!-- Detailed Analysis Tab -->
-      <section id="detailed" class="tab-content">
-        <div class="detailed-stats-grid">
-          <!-- Total Solved -->
-          <div class="detailed-stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-check-circle"></i>
-            </div>
-            <div class="stat-info">
-              <h3>Total Solved</h3>
-              <p id="detailed-total-solved">0</p>
-            </div>
+          <!-- Topic-Wise Detailed Analysis -->
+          <div class="topic-wise-section">
+            <h2>Topic-Wise Detailed Analysis</h2>
+            <p class="tw-intro">
+              View a deeper breakdown of your progress, difficulty distribution, 
+              and potential metrics like “Longest Streak” or “Time Spent” for each topic.
+            </p>
+            <div id="topic-wise-grid" class="topic-wise-grid"></div>
           </div>
-          <!-- Average Solved Per Day -->
-          <div class="detailed-stat-card">
-            <div class="stat-icon">
-              <i class="fas fa-chart-line"></i>
-            </div>
-            <div class="stat-info">
-              <h3>Average Solved Per Day</h3>
-              <p id="detailed-average-solved">0</p>
-            </div>
-          </div>
-        </div>
+        </section>
 
-        <!-- Solves Over Time Graph -->
-        <div class="graph-section">
-          <h2>Solves Over Time</h2>
-          <div class="chart-wrapper custom-chart-height">
-            <canvas id="solves-over-time-chart"></canvas>
-          </div>
-        </div>
-
-        <!-- Difficulty Distribution -->
-        <div class="chart-section">
-          <h2>Difficulty Distribution</h2>
-          <div class="chart-wrapper custom-chart-height">
-            <canvas id="difficulty-distribution-chart"></canvas>
-          </div>
-        </div>
-
-        <!-- Topic-Wise Detailed Analysis -->
-        <div class="topic-wise-section">
-          <h2>Topic-Wise Detailed Analysis</h2>
-          <p class="tw-intro">
-            View a deeper breakdown of your progress, difficulty distribution, 
-            and potential metrics like “Longest Streak” or “Time Spent” for each topic.
-          </p>
-          <div id="topic-wise-grid" class="topic-wise-grid"></div>
-        </div>
-      </section>
-
-      <!-- Calendar Tab -->
-      <section id="calendar" class="tab-content">
-        <h2>Calendar Overview</h2>
-        <div id="calendar-container" class="calendar"></div>
-      </section>
-    </main>
-  </div>
-
-  <!-- Loading Spinner -->
-  <div id="loading-spinner" class="loading-spinner">
-    <div class="spinner"></div>
-  </div>
-
-  <!-- Progress Announcer for Accessibility -->
-  <div class="sr-only" aria-live="polite" id="progress-announcer"></div>
-
-  <!-- =========== Modal for Problems on Selected Day =========== -->
-  <div id="day-modal" class="modal">
-    <div class="modal-content">
-      <span id="close-modal" class="modal-close">&times;</span>
-      <h2>Problems on <span id="modal-date"></span></h2>
-      <p id="problems-count" style="margin-bottom:1rem;"></p>
-      <table id="problems-table">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Difficulty</th>
-          </tr>
-        </thead>
-        <tbody id="problems-body"></tbody>
-      </table>
+        <!-- Calendar Tab -->
+        <section id="calendar" class="tab-content">
+          <h2>Calendar Overview</h2>
+          <div id="calendar-container" class="calendar"></div>
+        </section>
+      </main>
     </div>
-  </div>
 
-  <!-- Main Script -->
-  <script type="module" src="app.js"></script>
-</body>
+    <!-- Loading Spinner -->
+    <div id="loading-spinner" class="loading-spinner">
+      <div class="spinner"></div>
+    </div>
+
+    <!-- Progress Announcer for Accessibility -->
+    <div class="sr-only" aria-live="polite" id="progress-announcer"></div>
+
+    <!-- Modal for Problems on Selected Day -->
+    <div id="day-modal" class="modal">
+      <div class="modal-content">
+        <span id="close-modal" class="modal-close">&times;</span>
+        <h2>Problems on <span id="modal-date"></span></h2>
+        <p id="problems-count" style="margin-bottom:1rem;"></p>
+        <table id="problems-table">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Difficulty</th>
+            </tr>
+          </thead>
+          <tbody id="problems-body"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- Main Script -->
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
