--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <option value="deva">Deva</option>
             <option value="Ananth">Ananth</option>
             <option value="revanth">Revanth</option>
-            <option value="murali">Murali</option> <!-- New Profile Added -->
+            <option value="murali">Murali</option> <!-- Existing profile -->
+            <option value="vishan">Vishan</option> <!-- New profile added -->
           </select>
         </div>
 
